--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 #NEXT_PUBLIC_BACKEND_URL=http://192.168.43.228:8080
-NEXT_PUBLIC_BACKEND_URL=https://oxus-library.duckdns.org/
+# NEXT_PUBLIC_BACKEND_URL=https://oxus-library.duckdns.org/
+NEXT_PUBLIC_BACKEND_URL=https://lms-dev.duckdns.org
