--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "next": "16.0.0",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-day-picker": "^9.8.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-paginate": "^8.3.0",
